--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/RegisteredCourse.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/RegisteredCourse.cshtml
@@ -71,7 +71,7 @@
 
             <!-- Filter Section -->
             <div class="filter-section">
-            <label for="semesterFilter">Filter by Semester</label>
+            <label for="semesterFilter">Semester</label>
                 <select id="semesterFilter">
                     <option value="">All Semester</option>
                     @foreach (var semester in registeredCourses.Select(c => c.CourseOffering.Semester)
