--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/RegistrationDetails.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/RegistrationDetails.cshtml
@@ -56,7 +56,7 @@
                 <div class="profile-pic">
                     <img id="admin-profile" src="~/images/profile.png" alt="Admin Profile">
                 </div>
-                <span id="admin-name">@ViewBag.AdminName</span>
+                <span id="admin-name">| Admin: @ViewBag.AdminName</span>
                 <span id="date-time">| Date: <span id="current-date"></span> | Time: <span id="current-time"></span></span>
             </div>
         </div>
